--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!doctype html>
 <html>
 <head>
@@ -14,7 +12,10 @@
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
-  <h2>WEB</h2>
-  <p><a href="https://en.wikipedia.org/wiki/World_Wide_Web" target="_blank" title="html5 specification">The World Wide Web (WWW)</a>, commonly known as the Web, is an information system where documents and other web resources are identified by Uniform Resource Locators (URLs, such as https://example.com/), which may be interlinked by hyperlinks, and are accessible over the Internet.</p>
+  <h2>HTML이란 무엇인가?</h2>
+  <p><a href="https://www.w3.org/TR/html52/textlevel-semantics.html#the-a-element" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a>is the standard markup language for <strong>creating <u>Web</u> pages</strong> and web applications.</p>
+  <img src="coding.jpg" width = "100%">
+  <p style="margin-top:45px;">
+  Alongside Cascading Style Sheets (CSS) and JavaScript (JS), it forms the triad of the World Wide Web (WWW). A web browser would typically receive HTML documents from either a web server or local storage.</p>
 </body>
 </html>
