--- a/index.html
+++ b/index.html
@@ -1,90 +1,37 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="ko">
 <head>
-  <title>WEB1-html</title>
-  <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Markdown Viewer</title>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 800px;
+            margin: auto;
+            padding: 20px;
+        }
+    </style>
 </head>
-
 <body>
-  <h1><a href="index.html">WEB</a></h1>
-  <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-  </ol>
-  <h2>HTML이란 무엇인가?</h2>
-  <p><a href="https://www.w3.org/TR/html52/textlevel-semantics.html#the-a-element" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a>is the standard markup language for <strong>creating <u>Web</u> pages</strong> and web applications.</p>
-  <img src="coding.jpg" width = "100%">
-  <p style="margin-top:45px;">
-  Alongside Cascading Style Sheets (CSS) and JavaScript (JS), it forms the triad of the World Wide Web (WWW). A web browser would typically receive HTML documents from either a web server or local storage.</p>
-  
-// Q1. make a string out of an array
-{
-  const fruits = ['apple', 'banana', 'orange'];
-}
 
-// Q2. make an array out of a string
-{
-  const fruits = '🍎, 🥝, 🍌, 🍒';
-}
+    <h2>Markdown Viewer</h2>
+    <div id="content">Loading...</div>
 
-// Q3. make this array look like this: [5, 4, 3, 2, 1]
-{
-  const array = [1, 2, 3, 4, 5];
-}
+    <script>
+        async function loadMarkdown() {
+            try {
+                const response = await fetch('example.md'); // 같은 폴더에 있는 example.md 로드
+                if (!response.ok) throw new Error("Markdown 파일을 불러올 수 없습니다.");
+                const text = await response.text();
+                document.getElementById('content').innerHTML = marked.parse(text);
+            } catch (error) {
+                document.getElementById('content').innerHTML = `<p style="color:red;">오류: ${error.message}</p>`;
+            }
+        }
+        loadMarkdown();
+    </script>
 
-// Q4. make new array without the first two elements
-{
-  const array = [1, 2, 3, 4, 5];
-}
-
-class Student {
-  constructor(name, age, enrolled, score) {
-    this.name = name;
-    this.age = age;
-    this.enrolled = enrolled;
-    this.score = score;
-  }
-}
-const students = [
-  new Student('A', 29, true, 45),
-  new Student('B', 28, false, 80),
-  new Student('C', 30, true, 90),
-  new Student('D', 40, false, 66),
-  new Student('E', 18, true, 88),
-];
-
-// Q5. find a student with the score 90
-{
-}
-
-// Q6. make an array of enrolled students
-{
-}
-
-// Q7. make an array containing only the students' scores
-// result should be: [45, 80, 90, 66, 88]
-{
-}
-
-// Q8. check if there is a student with the score lower than 50
-{
-}
-
-// Q9. compute students' average score
-{
-}
-
-// Q10. make a string containing all the scores
-// result should be: '45, 80, 90, 66, 88'
-{
-}
-
-// Bonus! do Q10 sorted in ascending order
-// result should be: '45, 66, 80, 88, 90'
-{
-}
-array-api.js
-array-api.js 표시 중입니다.
 </body>
 </html>
