--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script>
         async function loadMarkdown() {
             try {
-                const response = await fetch('example.md'); // 같은 폴더에 있는 example.md 로드
+                const response = await fetch('README.md'); // 같은 폴더에 있는 example.md 로드
                 if (!response.ok) throw new Error("Markdown 파일을 불러올 수 없습니다.");
                 const text = await response.text();
                 document.getElementById('content').innerHTML = marked.parse(text);
