--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <article id="content" class="markdown-body">Loading...</article>
 
-    <script>
+    <!-- <script>
         async function loadMarkdown() {
             try {
                 const response = await fetch('README.md'); // 같은 폴더의 README.md 로드
@@ -66,6 +66,25 @@
                     hljs.highlightElement(block);
                 });
 
+            } catch (error) {
+                document.getElementById('content').innerHTML = `<p style="color:red;">오류: ${error.message}</p>`;
+            }
+        }
+        loadMarkdown();
+    </script> -->
+    <script>
+        async function loadMarkdown() {
+            try {
+                const response = await fetch('https://raw.githubusercontent.com/2drgnwin/2drgnwin.github.io/main/README.md'); 
+                if (!response.ok) throw new Error("Markdown 파일을 불러올 수 없습니다.");
+                const text = await response.text();
+                document.getElementById('content').innerHTML = marked.parse(text);
+    
+                // 코드 블록 하이라이트 적용
+                document.querySelectorAll("pre code").forEach(block => {
+                    hljs.highlightElement(block);
+                });
+    
             } catch (error) {
                 document.getElementById('content').innerHTML = `<p style="color:red;">오류: ${error.message}</p>`;
             }
