--- a/mid1.html
+++ b/mid1.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>중간보고 목차</title>
+  <title>1차 중간보고 (2025.07.01)</title>
   
 <style>
   body {
@@ -35,13 +35,25 @@
 </head>
 <body>
   <header>
-    <h1>프로젝트 중간보고</h1>
+    <h1>1차 중간보고</h1>
+    <p>2025년 7월 1일</p>
   </header>
   <main>
-    <ul>
-      <li><a href="mid1.html">1차 중간보고 (2025.07.01)</a></li>
-      <li><a href="mid2.html">2차 중간보고 (2025.08.01)</a></li>
-    </ul>
+    <section>
+      <h2>1. 개요</h2>
+      <p>프로젝트 시작 배경 및 목표</p>
+    </section>
+    <section>
+      <h2>2. 진행 상황</h2>
+      <ul>
+        <li>UI 디자인 완료</li>
+        <li>기능 1차 구현 완료</li>
+      </ul>
+    </section>
+    <section>
+      <h2>3. 향후 계획</h2>
+      <p>기능 보완 및 테스트</p>
+    </section>
   </main>
   <footer>
     <p>&copy; 2025 Project Team</p>
